# risky

./: pyproject.toml
src/risky/data/: classic.json
src/risky/engine/: __init__.py  actions.py  cards.py  combat.py  map.py  rules.py  state.py
tests/: test_cards.py  test_combat.py  test_map.py  test_rules.py  test_state.py
