[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "risky"
version = "0.1.0"
description = ""
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
]

[tool.mypy]
strict = true
python_version = "3.10"
warn_unused_ignores = true